# airplay2-rs

./: .audit.toml  .gitattributes  .gitignore  Cargo.toml  README.md  VERIFICATION_RESULTS.md  airplay2-checklist.md  audit.toml  check_licenses.py  check_specific_licenses.py  cobertura.xml  deny.toml  find_0bsd.py  find_bsd1.py  find_clippy_no_reason.py  find_lgpl.py  find_llvm.py  find_no_reason.py  find_parens.py  find_unlicense.py  findings.md  fix_manager.py  fix_ptp.py  lcov.info  patch.diff  patch.py  patch2.diff  patch_capture.diff  patch_integration_tests.sh  plan.md  plan_notes.txt  reapply.sh  reapply_streaming.sh  reproduce_connect_error.rs  reproduction  reproduction.rs  run_test.patch  rustfmt.toml  scratch.txt  test_captures.sh  (+2 more)
.cargo/: config.toml
.github/workflows/: ci.yml  integration.yml  security.yml
airplay2-receiver/: ap2-receiver.py
airplay2-receiver/ap2/: sdphandler.py  utils.py
benches/: protocol_benchmarks.rs  raop_benchmarks.rs  receiver_benchmarks.rs  resampler_benchmarks.rs  streaming_benchmarks.rs
docs/: 00-overview.md  01-project-setup.md  02-core-types.md  03-binary-plist.md  04-crypto-primitives.md  05-rtsp-protocol.md  06-rtp-protocol.md  08-mdns-discovery.md  10-connection-management.md  11-audio-formats.md  12-audio-buffer.md  13-pcm-streaming.md  14-url-streaming.md  15-playback-control.md  17-state-events.md  18-volume-control.md  19-multiroom.md  21-airplay-client.md  22-high-level-api.md  23-examples.md  25-raop-discovery.md  26-rsa-authentication.md  27-rtsp-raop-session.md  28-rtp-raop-streaming.md  29-raop-encryption.md  30-dacp-remote-control.md  31-daap-metadata.md  32-airplay1-integration.md  33-airplay1-testing.md  34-airplay1-receiver-overview.md  35-raop-service-advertisement.md  36-rtsp-server-sans-io.md  37-receiver-session-management.md  38-sdp-parsing-stream-setup.md  39-rtp-receiver-core.md  40-timing-synchronization.md  41-jitter-buffer-packet-loss.md  42-audio-output-abstraction.md  43-volume-metadata-handling.md  44-receiver-integration.md  (+17 more)
docs/complete/: 01-project-setup.md  02-core-types.md  03-binary-plist.md  05-rtsp-protocol.md  06-rtp-protocol.md  07-homekit-pairing.md  08-mdns-discovery.md  09-async-runtime.md  11-audio-formats.md  12-audio-buffer.md  13-pcm-streaming.md  14-url-streaming.md  16-queue-management.md  19-multiroom.md  20-mock-server.md  21-airplay-client.md  22-high-level-api.md  24-airplay1-overview.md  25-raop-discovery.md  26-rsa-authentication.md  27-rtsp-raop-session.md  28-rtp-raop-streaming.md  29-raop-encryption.md  30-dacp-remote-control.md  31-daap-metadata.md  32-airplay1-integration.md  33-airplay1-testing.md  34-airplay1-receiver-overview.md  35-raop-service-advertisement.md  37-receiver-session-management.md  38-sdp-parsing-stream-setup.md  49-homekit-pairing-server.md  52-multi-phase-setup.md  57-multi-room.md  59-command-feedback.md  61-testing-infrastructure.md  65-audio-verification-framework.md  66-shairport-sync-setup.md  deficiency-review.md  documentation-deficiencies.md
examples/: connect_to_receiver.rs  discover.rs  generate_stereo_file.rs  interactive.rs  multi_room.rs  persistent_pairing.rs  play_alac.rs  play_mp3.rs  play_mp3_verified.rs  play_pcm.rs  play_to_kitchen.rs  play_url.rs  receiver.rs  test_ed25519.rs  test_hkdf.rs  verify_metadata.rs  verify_stereo.rs  verify_volume_pause.rs
integration_tests/: Cargo.toml
integration_tests/tests/: aac_eld_streaming.rs  aac_streaming.rs  ap2_streaming_integration.rs  audio_verify_extra_tests.rs  audio_verify_tests.rs  bit_depth_integration.rs  buffer_integration.rs  forget_device_integration.rs  heartbeat_integration.rs  heartbeat_integration.rs.orig  integration_tests.rs  metadata_integration.rs  multiroom_integration.rs  ntp_client_integration.rs  ntp_integration.rs  persistent_pairing_integration.rs  player_integration.rs  ptp_integration.rs  ptp_node_integration.rs  raop_integration_tests.rs  reconnection_integration.rs  resampling_integration.rs  retransmission_integration.rs  session_timeout_integration.rs  shairport_sync_tests.rs  subprocess_additional_tests.rs  subprocess_tests.rs  volume_pause_integration.rs
integration_tests/tests/common/: audio_verify.rs  audio_verify_tests.rs  diagnostics.rs  mod.rs  ports.rs  ports.rs.orig  python_receiver.rs  python_receiver.rs.orig  shairport_sync.rs  subprocess.rs  subprocess.rs.orig
integration_tests/tests/common/audio_verify/: mod.rs  tests.rs
integration_tests/tests/common/shairport_sync_tests/: mod.rs
integration_tests/tests/shairport/: build.sh
pairings/: ltsk.txt
src/: client.rs  error.rs  error_tests.rs  lib.rs  player.rs
src/audio/: aac_encoder.rs  buffer.rs  clock.rs  concealment.rs  convert.rs  format.rs  jitter.rs  mod.rs  output.rs  output_coreaudio.rs  output_cpal.rs  tests.rs
src/client/: mod.rs  protocol.rs  session.rs  (+1 more)
tests/: aac_streaming.rs  advertiser_integration.rs  ap2_authentication_integration.rs  ap2_handshake_simulation.rs  client_extended_integration.rs  client_extended_test.rs  client_integration.rs  client_integration.rs.orig  command_feedback_integration.rs  create_fixtures.rs  crypto_vectors.rs  discovery_integration.rs  full_handshake.rs  integration_tests.rs  multi_room_integration.rs  network_flakiness.rs  persistent_pairing_integration.rs  player_extended_integration.rs  player_integration.rs  plist_integration.rs  protocol_integration.rs  ptp_integration.rs  raop_compliance.rs  raop_compliance.rs.orig  raop_encryption_integration.rs  raop_extended_integration.rs  raop_integration_tests.rs  raop_protocol_compliance.rs  raop_streaming_integration.rs  raop_stress_tests.rs  raop_unit_tests.rs  receiver.rs  receiver_integration.rs  receiver_rtp_tests.rs  receiver_session_tests.rs  resampling_integration.rs  rtsp_edge_cases.rs  rtsp_extended.rs  rtsp_integration.rs  rtsp_server_tests.rs  (+3 more)
(+354 files in other folders)
