[package]
name = "airplay2"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Your Name <email@example.com>"]
description = "Pure Rust library for streaming audio to AirPlay 2 devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/org/airplay2-rs"
keywords = ["airplay", "audio", "streaming", "homekit", "multiroom"]
categories = ["multimedia::audio", "network-programming"]
readme = "README.md"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["tokio", "tokio-util"]

[dependencies]
# Async
# Pinned to 1.38.2 to align socket2 dependency (0.5) with mdns-sd
tokio = { version = "=1.38.2", features = ["net", "sync", "time", "rt", "macros"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Discovery
mdns-sd = "0.12"

# Crypto
rsa = "0.9"
sha1 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
srp = "0.6"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
byteorder = "1.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
aes = "0.8"
ctr = "0.9"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
curve25519-dalek = "4.1"
zeroize = "1.8"

# Serialization
bytes = "1.9"

# Audio processing
rubato = "0.14"           # Audio resampling

# Persistent storage (optional)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "=1.38.2", features = ["full", "test-util"] }
tokio-test = "0.4"
# Pinned to 1.5.0 to align rand dependency (0.8)
proptest = "=1.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["async_tokio"] }
# Pinned to 3.10.1 to align getrandom dependency (0.2)
tempfile = "=3.10.1"

[[bench]]
name = "protocol_benchmarks"
harness = false
