[package]
name = "airplay2"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Your Name <email@example.com>"]
description = "Pure Rust library for streaming audio to AirPlay 2 devices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/org/airplay2-rs"
keywords = ["airplay", "audio", "streaming", "homekit", "multiroom"]
categories = ["multimedia::audio", "network-programming"]
readme = "README.md"

[features]
default = ["tokio-runtime", "raop"]
tokio-runtime = ["tokio", "tokio-util"]
raop = ["rsa", "sha1"]
receiver = []
audio-coreaudio = ["dep:coreaudio-rs"]
audio-cpal = ["dep:cpal"]
audio-alsa = ["dep:alsa"]
receiver-full = ["receiver", "audio-coreaudio", "audio-cpal"]

[dependencies]
cpal = { version = "0.15.3", optional = true, default-features = false }
bytes = "1.11.1"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = { version = "0.9", optional = true }

# Async
# Pinned to 1.38.2 to align socket2 dependency (0.5) with mdns-sd
tokio = { version = "=1.38.2", features = ["net", "sync", "time", "rt", "macros", "fs"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# Discovery
mdns-sd = "0.12"
hostname = "0.4"

# Crypto
rsa = { version = "0.9", optional = true }
sha1 = { version = "0.10", features = ["oid"], optional = true }
base64 = "0.22"
srp = "0.6"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
byteorder = "1.5"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
aes = "0.8"
ctr = "0.9"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
curve25519-dalek = "4.1"
zeroize = "1.8"

# Serialization
bytes = "1.9"

# Audio processing
rubato = "0.14"           # Audio resampling
alac-encoder = "0.3"      # ALAC encoding

# Persistent storage (optional)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "=1.38.2", features = ["full", "test-util"] }
tokio-test = "0.4"
# Pinned to 1.5.0 to align rand dependency (0.8)
proptest = "=1.5.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["async_tokio"] }
# Pinned to 3.10.1 to align getrandom dependency (0.2)
tempfile = "=3.10.1"
# Integration test dependencies
chrono = "0.4"
nix = { version = "0.29", features = ["signal"] }

[[bench]]
name = "protocol_benchmarks"
harness = false

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = { version = "0.14", optional = true }
