[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
airplay2 = { path = "../" }
tokio = { version = "1.38.2", features = ["full", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["signal"] }
chrono = "0.4"
bytes = "1.11"
