[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
airplay2 = { path = "../" }
tokio = { version = "1.38.2", features = ["full"] }
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.10"
nix = { version = "0.29", features = ["signal"] }
chrono = "0.4"
base64 = "0.22"
rand = "0.8"
log = "0.4"
anyhow = "1.0"
# Add other dependencies used by tests if needed, e.g. walkdir for persistent pairing test if it scans dirs?
walkdir = "2"
bytes = "1.11.1"
